--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "ts-lib": "^0.0.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.7"
   }
 }
