updated keywords for SEO

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "keywords": [
     "mpesa",
     "daraja",
+    "Daraja v3",
+    "Daraja 3.0",
+    "New Mpesa v3 API",
+    "Safaricom Mpesa API",
     "nodejs-mpesa",
     "safaricom",
     "fintech"
