--- a/package.json
+++ b/package.json
@@ -35,18 +35,20 @@
     "url": "https://github.com/SeanBaraka/mpesa-sdk/issues"
   },
   "homepage": "https://github.com/SeanBaraka/mpesa-sdk#readme",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/node": "^17.0.31",
-    "axios": "^0.27.2",
-    "rollup": "^2.71.1",
-    "rollup-plugin-typescript2": "^0.31.2",
-    "ts-lib": "^0.0.5",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.0",
+    "@types/node": "^22.10.2",
+    "rollup": "^4.28.0",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "dayjs": "^1.11.7"
+    "dayjs": "^1.11.11"
   }
 }
